noinst_LIBRARIES = libcunit.a
libcunit_a_SOURCES = case.c result.c suite.c throw.c equals.c console.c output.c runner.c test.c vector.c cunit_int.h cunit_runner.h cunit_listener.h cunit_suite.h cunit_output.h cunit_test.h cunit_case.h cunit_result.h cunit_throw.h

INCLUDES = -I$(top_srcdir)/include

